--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -109,6 +109,10 @@ The proposed retrieval engine was realized in a form of a graphical user search 
 \section{\versionTwo}
 
 \subsection{Concept}
+
+\cc{test}
+Contrary to the proposed interface in \versionOne which is written in C++, this interface here is written in javascript which can be easily extendable to web interfaces.
+
 \subsection{Scoring System}
 \subsection{Vehicle Trajectory}
 \subsection{Vehicle Color \& Color Mode}
